--- a/src/ButtonSlider.css
+++ b/src/ButtonSlider.css
@@ -26,7 +26,7 @@
   
   .carousel-control-next-icon,
   .carousel-control-prev-icon {
-    filter: invert(100%);
+    /* filter: invert(100%); */
     width: 20px;
     height: 20px;
   }
